force-app/main/default/objects/MUSW__Mapping_Service__c/MUSW__Mapping_Service__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <description>Internal - API configuration for GIS Service</description>
    <label>Mapping Service</label>
    <nameField>
        <label>Mapping Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mapping Service</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>