force-app/main/default/objects/MUSW__Mapping_Service__c/fields/MUSW__Service_API__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Service_API__c</fullName>
    <label>Service API</label>
    <type>TextArea</type>
</CustomField>