force-app/main/default/objects/MUSW__Mapping_Service__c/fields/MUSW__Service_Key__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Service_Key__c</fullName>
    <label>Service Key</label>
    <length>150</length>
    <type>Text</type>
</CustomField>