force-app/main/default/objects/MUSW__Mapping_Service__c/fields/MUSW__Service_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Service_Name__c</fullName>
    <label>Service Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>